a single quoation mark removed from email address.

--- a/PCK_HTML_CSS_Bio1.1.html
+++ b/PCK_HTML_CSS_Bio1.1.html
@@ -21,7 +21,7 @@
     <section id="contact-info">
         <h2>Contact Information</h2>
             <ul>
-                <li><strong>Email: </strong><a href="mailto:patrick.c.kearney@gmail.com">patrick.c.kearney@gmail.com"</a></li>
+                <li><strong>Email: </strong><a href="mailto:patrick.c.kearney@gmail.com">patrick.c.kearney@gmail.com</a></li>
                 <li><strong>Github: </strong><a href="https://github.com/pckearney25">pckearney25</a></li>
                 <li><bstrong>Portfolio: </strong><a href="#">coming soon</a></li>
             </ul>
